--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-
     <style>
 
-       body {
+        body {
     background-color: #1D4221;
     color: white;
     font-family: "Bai Jamjuree", sans-serif;
@@ -36,12 +35,11 @@ main {
 
 img {
     max-width: 90%;
-} 
+}
     </style>
 
-    <script>
-
-      const avanca = document.querySelectorAll('.btn-proximo');
+    <script.js>
+const avanca = document.querySelectorAll('.btn-proximo');
 
 avanca.forEach(button => {
     button.addEventListener('click', function(){
@@ -51,8 +49,9 @@ avanca.forEach(button => {
         atual.classList.remove('ativo');
         document.getElementById(proximoPasso).classList.add('ativo');
     })
-})  
-    </script>
+})
+        
+    </script.js>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
